--- a/Car SelectorV2.html
+++ b/Car SelectorV2.html
@@ -43,7 +43,7 @@
 <body>
 <header>
   <div class="container">
-    <h1 class="title">Car Selector</h1>
+    <h1 class="title">Car Selector Alpha Release</h1>
     <p class="sub">Find your perfect match — from city EVs to heavy‑duty utes.</p>
   </div>
 </header>
@@ -994,3 +994,4 @@
 </script>
 </body>
 </html>
+
